# ComfyUI_PromptQueue

./: README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
ComfyUI_PromptTool/: LICENSE  nodes.py
_prompt_queue_state/: presets.json  state.json
