[project]
name = "promptqueue"
description = "ComfyUI custom node: batch prompt queue from multiline/text file with incremental per-run consumption and {p} templating."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/cyan9977/ComfyUI_PromptQueue"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/cyan9977/ComfyUI_PromptQueue/wiki"
"Bug Tracker" = "https://github.com/cyan9977/ComfyUI_PromptQueue/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_PromptQueue"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

